add styles for snake and apple

--- a/style.css
+++ b/style.css
@@ -5,3 +5,16 @@
     flex-wrap: wrap;
     border-style: solid;
 }
+
+.grid div {
+    width: 20px;
+    height: 20px;
+}
+
+.snake {
+    background-color: blue;
+}
+
+.apple {
+    background-color: purple;
+}
